# terraform-provider-azurerm

./: .gitignore  BUILD  WORKSPACE  deps.bzl
.github/: labeler-issue-triage.yml  labeler-pull-request-triage.yml
helpers/azure/: BUILD.bazel
helpers/tf/: BUILD.bazel
helpers/validate/: BUILD.bazel
internal/acceptance/: BUILD.bazel
internal/acceptance/check/: BUILD.bazel
internal/acceptance/helpers/: BUILD.bazel
internal/acceptance/ssh/: BUILD.bazel
internal/acceptance/testclient/: BUILD.bazel
internal/acceptance/types/: BUILD.bazel
internal/clients/: BUILD.bazel
internal/clients/graph/: BUILD.bazel
internal/common/: BUILD.bazel
internal/features/: BUILD.bazel
internal/locks/: BUILD.bazel
internal/provider/: BUILD.bazel
internal/resourceproviders/: BUILD.bazel
internal/resourceproviders/custompollers/: BUILD.bazel
internal/sdk/: BUILD.bazel
internal/services/aadb2c/: BUILD.bazel
internal/services/aadb2c/client/: BUILD.bazel
internal/services/advisor/: BUILD.bazel
internal/services/advisor/client/: BUILD.bazel
internal/services/analysisservices/: BUILD.bazel
internal/services/analysisservices/client/: BUILD.bazel
internal/services/analysisservices/validate/: BUILD.bazel
internal/services/apimanagement/: BUILD.bazel
internal/services/apimanagement/client/: BUILD.bazel
internal/services/apimanagement/migration/: BUILD.bazel
internal/services/apimanagement/parse/: BUILD.bazel
internal/services/apimanagement/schemaz/: BUILD.bazel
internal/services/apimanagement/validate/: BUILD.bazel
internal/services/appconfiguration/: BUILD.bazel
internal/services/appconfiguration/azuresdkhacks/: BUILD.bazel
internal/services/appconfiguration/client/: BUILD.bazel
internal/services/appconfiguration/migration/: BUILD.bazel
internal/services/appconfiguration/parse/: BUILD.bazel
internal/services/appconfiguration/validate/: BUILD.bazel
internal/services/applicationinsights/: BUILD.bazel
internal/services/applicationinsights/azuresdkhacks/: BUILD.bazel
internal/services/applicationinsights/client/: BUILD.bazel
internal/services/applicationinsights/migration/: BUILD.bazel
internal/services/applicationinsights/parse/: BUILD.bazel
internal/services/applicationinsights/validate/: BUILD.bazel
internal/services/appservice/: BUILD.bazel
internal/services/appservice/client/: BUILD.bazel
internal/services/appservice/helpers/: BUILD.bazel
internal/services/appservice/parse/: BUILD.bazel
internal/services/appservice/validate/: BUILD.bazel
internal/services/arckubernetes/: BUILD.bazel
internal/services/arckubernetes/client/: BUILD.bazel
internal/services/attestation/: BUILD.bazel
internal/services/attestation/client/: BUILD.bazel
internal/services/attestation/validate/: BUILD.bazel
internal/services/authorization/: BUILD.bazel
internal/services/authorization/azuresdkhacks/: BUILD.bazel
internal/services/authorization/client/: BUILD.bazel
internal/services/authorization/migration/: BUILD.bazel
internal/services/authorization/parse/: BUILD.bazel
internal/services/authorization/validate/: BUILD.bazel
internal/services/automanage/: BUILD.bazel
internal/services/automanage/client/: BUILD.bazel
internal/services/automanage/parse/: BUILD.bazel
internal/services/automanage/validate/: BUILD.bazel
internal/services/automation/: BUILD.bazel
internal/services/azuremanagedlustrefilesystem/: managed_lustre_file_system_resource.go
internal/services/azurestackhci/: BUILD.bazel
internal/services/batch/: BUILD.bazel
internal/services/billing/: BUILD.bazel
internal/services/blueprints/: BUILD.bazel
internal/services/bot/: BUILD.bazel
internal/services/cdn/: BUILD.bazel
internal/services/cognitive/: BUILD.bazel
internal/services/communication/: BUILD.bazel
internal/services/compute/: BUILD.bazel  disk_sas_token_resource.go  disk_sas_token_resource_test.go  linux_virtual_machine_resource.go  managed_disk_resource.go  managed_disk_resource_test.go  virtual_machine.go  virtual_machine_data_disk_attachment_resource.go  windows_virtual_machine_resource.go
internal/services/confidentialledger/: BUILD.bazel
internal/services/connections/: BUILD.bazel
internal/services/consumption/: BUILD.bazel
internal/services/containerapps/: BUILD.bazel
internal/services/containers/: BUILD.bazel
internal/services/cosmos/: BUILD.bazel
internal/services/costmanagement/: BUILD.bazel
internal/services/customproviders/: BUILD.bazel
internal/services/dashboard/: BUILD.bazel
internal/services/databasemigration/: BUILD.bazel
internal/services/databoxedge/: BUILD.bazel
internal/services/databricks/: BUILD.bazel
internal/services/datadog/: BUILD.bazel
internal/services/datafactory/: BUILD.bazel
internal/services/dataprotection/: BUILD.bazel  data_protection_backup_instance_disk_resource.go
internal/services/datashare/: BUILD.bazel
internal/services/desktopvirtualization/: BUILD.bazel
internal/services/devtestlabs/: BUILD.bazel
internal/services/digitaltwins/: BUILD.bazel
internal/services/disks/: BUILD.bazel  disk_pool_managed_disk_attachment_resource.go
internal/services/dns/: BUILD.bazel
internal/services/domainservices/: BUILD.bazel
internal/services/elastic/: BUILD.bazel
internal/services/eventgrid/: BUILD.bazel
internal/services/eventhub/: BUILD.bazel
internal/services/firewall/: BUILD.bazel
internal/services/fluidrelay/: BUILD.bazel
internal/services/frontdoor/: BUILD.bazel
internal/services/graph/: BUILD.bazel
internal/services/hdinsight/: BUILD.bazel
internal/services/healthcare/: BUILD.bazel
internal/services/hpccache/: BUILD.bazel
internal/services/hsm/: BUILD.bazel
internal/services/hybridcompute/: BUILD.bazel
internal/services/iotcentral/: BUILD.bazel
internal/services/iothub/: BUILD.bazel
internal/services/iottimeseriesinsights/: BUILD.bazel
internal/services/keyvault/: BUILD.bazel
internal/services/kusto/: BUILD.bazel
internal/tags/: BUILD.bazel
internal/timeouts/: BUILD.bazel
utils/: BUILD.bazel
version/: BUILD.bazel
(+389 files in other folders)
