load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "clients",
    srcs = [
        "auth.go",
        "builder.go",
        "client.go",
        "client_gen.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/clients",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/clients/graph",
        "//internal/common",
        "//internal/features",
        "//internal/resourceproviders",
        "//internal/services/aadb2c/client",
        "//internal/services/advisor/client",
        "//internal/services/analysisservices/client",
        "//internal/services/apimanagement/client",
        "//internal/services/appconfiguration/client",
        "//internal/services/applicationinsights/client",
        "//internal/services/appservice/client",
        "//internal/services/arckubernetes/client",
        "//internal/services/attestation/client",
        "//internal/services/authorization/client",
        "//internal/services/automanage/client",
        "//internal/services/automation/client",
        "//internal/services/azurestackhci/client",
        "//internal/services/batch/client",
        "//internal/services/blueprints/client",
        "//internal/services/bot/client",
        "//internal/services/cdn/client",
        "//internal/services/cognitive/client",
        "//internal/services/communication/client",
        "//internal/services/compute/client",
        "//internal/services/confidentialledger/client",
        "//internal/services/connections/client",
        "//internal/services/consumption/client",
        "//internal/services/containerapps/client",
        "//internal/services/containers/client",
        "//internal/services/cosmos/client",
        "//internal/services/costmanagement/client",
        "//internal/services/customproviders/client",
        "//internal/services/dashboard/client",
        "//internal/services/databasemigration/client",
        "//internal/services/databoxedge/client",
        "//internal/services/databricks/client",
        "//internal/services/datadog/client",
        "//internal/services/datafactory/client",
        "//internal/services/dataprotection/client",
        "//internal/services/datashare/client",
        "//internal/services/desktopvirtualization/client",
        "//internal/services/devtestlabs/client",
        "//internal/services/digitaltwins/client",
        "//internal/services/disks/client",
        "//internal/services/dns/client",
        "//internal/services/domainservices/client",
        "//internal/services/elastic/client",
        "//internal/services/eventgrid/client",
        "//internal/services/eventhub/client",
        "//internal/services/firewall/client",
        "//internal/services/fluidrelay/client",
        "//internal/services/frontdoor/client",
        "//internal/services/graph/client",
        "//internal/services/hdinsight/client",
        "//internal/services/healthcare/client",
        "//internal/services/hpccache/client",
        "//internal/services/hsm/client",
        "//internal/services/hybridcompute/client",
        "//internal/services/iotcentral/client",
        "//internal/services/iothub/client",
        "//internal/services/iottimeseriesinsights/client",
        "//internal/services/keyvault/client",
        "//internal/services/kusto/client",
        "//internal/services/labservice/client",
        "//internal/services/legacy/client",
        "//internal/services/lighthouse/client",
        "//internal/services/loadbalancer/client",
        "//internal/services/loadtestservice/client",
        "//internal/services/loganalytics/client",
        "//internal/services/logic/client",
        "//internal/services/logz/client",
        "//internal/services/machinelearning/client",
        "//internal/services/maintenance/client",
        "//internal/services/managedapplications/client",
        "//internal/services/managedidentity/client",
        "//internal/services/managementgroup/client",
        "//internal/services/maps/client",
        "//internal/services/mariadb/client",
        "//internal/services/media/client",
        "//internal/services/mixedreality/client",
        "//internal/services/mobilenetwork/client",
        "//internal/services/monitor/client",
        "//internal/services/mssql/client",
        "//internal/services/mssqlmanagedinstance/client",
        "//internal/services/mysql/client",
        "//internal/services/netapp/client",
        "//internal/services/network/client",
        "//internal/services/networkfunction/client",
        "//internal/services/newrelic/client",
        "//internal/services/nginx/client",
        "//internal/services/notificationhub/client",
        "//internal/services/orbital/client",
        "//internal/services/policy/client",
        "//internal/services/portal/client",
        "//internal/services/postgres/client",
        "//internal/services/powerbi/client",
        "//internal/services/privatedns/client",
        "//internal/services/privatednsresolver/client",
        "//internal/services/purview/client",
        "//internal/services/recoveryservices/client",
        "//internal/services/redis/client",
        "//internal/services/redisenterprise/client",
        "//internal/services/relay/client",
        "//internal/services/resource/client",
        "//internal/services/search/client",
        "//internal/services/securitycenter/client",
        "//internal/services/sentinel/client",
        "//internal/services/servicebus/client",
        "//internal/services/serviceconnector/client",
        "//internal/services/servicefabric/client",
        "//internal/services/servicefabricmanaged/client",
        "//internal/services/signalr/client",
        "//internal/services/springcloud/client",
        "//internal/services/sql/client",
        "//internal/services/storage/client",
        "//internal/services/storagemover/client",
        "//internal/services/streamanalytics/client",
        "//internal/services/subscription/client",
        "//internal/services/synapse/client",
        "//internal/services/trafficmanager/client",
        "//internal/services/videoanalyzer/client",
        "//internal/services/vmware/client",
        "//internal/services/voiceservices/client",
        "//internal/services/web/client",
        "//vendor/github.com/Azure/go-autorest/autorest",
        "//vendor/github.com/Azure/go-autorest/autorest/azure",
        "//vendor/github.com/Azure/go-autorest/autorest/validation",
        "//vendor/github.com/hashicorp/go-azure-helpers/authentication",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonids",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/location",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/aadb2c/2021-04-01-preview",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/analysisservices/2017-08-01",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/azurestackhci/2023-03-01",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/datadog/2021-03-01",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/dns/2018-05-01",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/fluidrelay/2022-05-26",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/nginx/2022-08-01",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/redis/2023-04-01",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/timeseriesinsights/2020-05-15",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/auth",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/auth/autorest",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/claims",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/environments",
    ],
)
