load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "features",
    srcs = [
        "defaults.go",
        "dynamic_test_locations.go",
        "enhanced_validation.go",
        "four_point_oh.go",
        "user_flags.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/features",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "features_test",
    srcs = ["dynamic_test_locations_test.go"],
    embed = [":features"],
)
