load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "provider",
    srcs = [
        "features.go",
        "provider.go",
        "services.go",
        "services_gen.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/provider",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/clients",
        "//internal/features",
        "//internal/resourceproviders",
        "//internal/sdk",
        "//internal/services/aadb2c",
        "//internal/services/advisor",
        "//internal/services/analysisservices",
        "//internal/services/apimanagement",
        "//internal/services/appconfiguration",
        "//internal/services/applicationinsights",
        "//internal/services/appservice",
        "//internal/services/arckubernetes",
        "//internal/services/attestation",
        "//internal/services/authorization",
        "//internal/services/automanage",
        "//internal/services/automation",
        "//internal/services/azurestackhci",
        "//internal/services/batch",
        "//internal/services/billing",
        "//internal/services/blueprints",
        "//internal/services/bot",
        "//internal/services/cdn",
        "//internal/services/cognitive",
        "//internal/services/communication",
        "//internal/services/compute",
        "//internal/services/confidentialledger",
        "//internal/services/connections",
        "//internal/services/consumption",
        "//internal/services/containerapps",
        "//internal/services/containers",
        "//internal/services/cosmos",
        "//internal/services/costmanagement",
        "//internal/services/customproviders",
        "//internal/services/dashboard",
        "//internal/services/databasemigration",
        "//internal/services/databoxedge",
        "//internal/services/databricks",
        "//internal/services/datadog",
        "//internal/services/datafactory",
        "//internal/services/dataprotection",
        "//internal/services/datashare",
        "//internal/services/desktopvirtualization",
        "//internal/services/devtestlabs",
        "//internal/services/digitaltwins",
        "//internal/services/disks",
        "//internal/services/dns",
        "//internal/services/domainservices",
        "//internal/services/elastic",
        "//internal/services/eventgrid",
        "//internal/services/eventhub",
        "//internal/services/firewall",
        "//internal/services/fluidrelay",
        "//internal/services/frontdoor",
        "//internal/services/graph",
        "//internal/services/hdinsight",
        "//internal/services/healthcare",
        "//internal/services/hpccache",
        "//internal/services/hsm",
        "//internal/services/hybridcompute",
        "//internal/services/iotcentral",
        "//internal/services/iothub",
        "//internal/services/iottimeseriesinsights",
        "//internal/services/keyvault",
        "//internal/services/kusto",
        "//internal/services/labservice",
        "//internal/services/legacy",
        "//internal/services/lighthouse",
        "//internal/services/loadbalancer",
        "//internal/services/loadtestservice",
        "//internal/services/loganalytics",
        "//internal/services/logic",
        "//internal/services/logz",
        "//internal/services/machinelearning",
        "//internal/services/maintenance",
        "//internal/services/managedapplications",
        "//internal/services/managedidentity",
        "//internal/services/managementgroup",
        "//internal/services/maps",
        "//internal/services/mariadb",
        "//internal/services/media",
        "//internal/services/mixedreality",
        "//internal/services/mobilenetwork",
        "//internal/services/monitor",
        "//internal/services/mssql",
        "//internal/services/mssqlmanagedinstance",
        "//internal/services/mysql",
        "//internal/services/netapp",
        "//internal/services/network",
        "//internal/services/networkfunction",
        "//internal/services/newrelic",
        "//internal/services/nginx",
        "//internal/services/notificationhub",
        "//internal/services/orbital",
        "//internal/services/policy",
        "//internal/services/portal",
        "//internal/services/postgres",
        "//internal/services/powerbi",
        "//internal/services/privatedns",
        "//internal/services/privatednsresolver",
        "//internal/services/purview",
        "//internal/services/recoveryservices",
        "//internal/services/redis",
        "//internal/services/redisenterprise",
        "//internal/services/relay",
        "//internal/services/resource",
        "//internal/services/search",
        "//internal/services/securitycenter",
        "//internal/services/sentinel",
        "//internal/services/servicebus",
        "//internal/services/serviceconnector",
        "//internal/services/servicefabric",
        "//internal/services/servicefabricmanaged",
        "//internal/services/signalr",
        "//internal/services/springcloud",
        "//internal/services/sql",
        "//internal/services/storage",
        "//internal/services/storagemover",
        "//internal/services/streamanalytics",
        "//internal/services/subscription",
        "//internal/services/synapse",
        "//internal/services/trafficmanager",
        "//internal/services/videoanalyzer",
        "//internal/services/vmware",
        "//internal/services/voiceservices",
        "//internal/services/web",
        "//internal/tf/pluginsdk",
        "//utils",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonids",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/auth",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/environments",
        "//vendor/github.com/hashicorp/terraform-plugin-sdk/v2/diag",
        "//vendor/github.com/hashicorp/terraform-plugin-sdk/v2/helper/schema",
        "//vendor/github.com/hashicorp/terraform-plugin-sdk/v2/helper/validation",
    ],
)

go_test(
    name = "provider_test",
    srcs = [
        "features_test.go",
        "provider_schema_test.go",
        "provider_test.go",
        "services_test.go",
    ],
    embed = [":provider"],
    deps = [
        "//internal/clients",
        "//internal/features",
        "//internal/sdk",
        "//internal/tf/pluginsdk",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/auth",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/environments",
        "//vendor/github.com/hashicorp/terraform-plugin-sdk/v2/diag",
        "//vendor/github.com/hashicorp/terraform-plugin-sdk/v2/helper/logging",
        "//vendor/github.com/hashicorp/terraform-plugin-sdk/v2/helper/schema",
        "//vendor/github.com/hashicorp/terraform-plugin-sdk/v2/terraform",
    ],
)
