load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resourceproviders",
    srcs = [
        "cache.go",
        "registration.go",
        "required.go",
        "requiring_registration.go",
        "validation.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/resourceproviders",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/features",
        "//internal/resourceproviders/custompollers",
        "//internal/tf/validation",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonids",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/resources/2022-09-01/providers",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/client/pollers",
    ],
)

go_test(
    name = "resourceproviders_test",
    srcs = ["validation_test.go"],
    embed = [":resourceproviders"],
    deps = ["//internal/features"],
)
