load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testclient",
    srcs = ["client.go"],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/acceptance/testclient",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/clients",
        "//internal/features",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/auth",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/environments",
    ],
)
