load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "types",
    srcs = ["resource.go"],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/acceptance/types",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/clients",
        "//internal/tf/pluginsdk",
    ],
)
