load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = ["client.go"],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/clients/graph",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/auth",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/client",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/client/msgraph",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/environments",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/odata",
    ],
)
