load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "custompollers",
    srcs = [
        "resource_provider_register_poller.go",
        "resource_provider_unregister_poller.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/resourceproviders/custompollers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/resources/2022-09-01/providers",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/client/pollers",
    ],
)
