load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "aadb2c",
    srcs = [
        "aadb2c_directory_data_source.go",
        "aadb2c_directory_resource.go",
        "registration.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/services/aadb2c",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/sdk",
        "//internal/tags",
        "//internal/tf/pluginsdk",
        "//internal/tf/validation",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonids",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonschema",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/aadb2c/2021-04-01-preview/tenants",
    ],
)

go_test(
    name = "aadb2c_test",
    srcs = [
        "aadb2c_directory_data_source_test.go",
        "aadb2c_directory_resource_test.go",
    ],
    deps = [
        "//internal/acceptance",
        "//internal/acceptance/check",
        "//internal/clients",
        "//internal/tf/pluginsdk",
        "//utils",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/aadb2c/2021-04-01-preview/tenants",
    ],
)
