load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "analysisservices",
    srcs = [
        "analysis_services_server_resource.go",
        "registration.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/services/analysisservices",
    visibility = ["//:__subpackages__"],
    deps = [
        "//helpers/azure",
        "//helpers/tf",
        "//helpers/validate",
        "//internal/clients",
        "//internal/sdk",
        "//internal/services/analysisservices/validate",
        "//internal/tf/pluginsdk",
        "//internal/tf/validation",
        "//internal/timeouts",
        "//utils",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonschema",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/location",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/tags",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/analysisservices/2017-08-01/servers",
    ],
)

go_test(
    name = "analysisservices_test",
    srcs = ["analysis_services_server_resource_test.go"],
    deps = [
        "//internal/acceptance",
        "//internal/acceptance/check",
        "//internal/clients",
        "//internal/tf/pluginsdk",
        "//utils",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/analysisservices/2017-08-01/servers",
    ],
)
