load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "apimanagement",
    srcs = [
        "api_management_api_data_source.go",
        "api_management_api_diagnostic_resource.go",
        "api_management_api_operation_policy_resource.go",
        "api_management_api_operation_resource.go",
        "api_management_api_operation_tag_resource.go",
        "api_management_api_policy_resource.go",
        "api_management_api_release.go",
        "api_management_api_resource.go",
        "api_management_api_schema_resource.go",
        "api_management_api_tag_description_resource.go",
        "api_management_api_tag_resource.go",
        "api_management_api_version_set_data_source.go",
        "api_management_api_version_set_resource.go",
        "api_management_authorization_server_resource.go",
        "api_management_backend_resource.go",
        "api_management_certificate_resource.go",
        "api_management_custom_domain_resource.go",
        "api_management_data_source.go",
        "api_management_diagnostic_resource.go",
        "api_management_email_template_resource.go",
        "api_management_gateway_api_resource.go",
        "api_management_gateway_certificate_authority_resource.go",
        "api_management_gateway_data_source.go",
        "api_management_gateway_host_name_configuration_data_source.go",
        "api_management_gateway_host_name_configuration_resource.go",
        "api_management_gateway_resource.go",
        "api_management_global_schema_resource.go",
        "api_management_group_data_source.go",
        "api_management_group_resource.go",
        "api_management_group_user_resource.go",
        "api_management_identity_provider_aad_resource.go",
        "api_management_identity_provider_aadb2c_resource.go",
        "api_management_identity_provider_facebook_resource.go",
        "api_management_identity_provider_google_resource.go",
        "api_management_identity_provider_microsoft_resource.go",
        "api_management_identity_provider_twitter_resource.go",
        "api_management_logger_resource.go",
        "api_management_named_value_resource.go",
        "api_management_notification_recipient_email.go",
        "api_management_notification_recipient_user.go",
        "api_management_openid_connect_provider_resource.go",
        "api_management_policy_resource.go",
        "api_management_product_api_resource.go",
        "api_management_product_data_source.go",
        "api_management_product_group_resource.go",
        "api_management_product_policy_resource.go",
        "api_management_product_resource.go",
        "api_management_product_tag_resource.go",
        "api_management_redis_cache_resource.go",
        "api_management_resource.go",
        "api_management_subscription_resource.go",
        "api_management_tag_resource.go",
        "api_management_user_data_source.go",
        "api_management_user_resource.go",
        "diff_suppress.go",
        "identity_provider_import.go",
        "registration.go",
        "resourceids.go",
        "schema.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/services/apimanagement",
    visibility = ["//:__subpackages__"],
    deps = [
        "//helpers/azure",
        "//helpers/tf",
        "//helpers/validate",
        "//internal/clients",
        "//internal/features",
        "//internal/sdk",
        "//internal/services/apimanagement/migration",
        "//internal/services/apimanagement/parse",
        "//internal/services/apimanagement/schemaz",
        "//internal/services/apimanagement/validate",
        "//internal/services/eventhub/validate",
        "//internal/services/keyvault/parse",
        "//internal/services/keyvault/validate",
        "//internal/services/network/validate",
        "//internal/tags",
        "//internal/tf/pluginsdk",
        "//internal/tf/set",
        "//internal/tf/suppress",
        "//internal/tf/validation",
        "//internal/timeouts",
        "//utils",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/apimanagement/mgmt/2021-08-01/apimanagement",
        "//vendor/github.com/Azure/go-autorest/autorest",
        "//vendor/github.com/gofrs/uuid",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/pointer",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonids",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonschema",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/identity",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/location",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/zones",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/apimanagement/2021-08-01/schema",
        "//vendor/github.com/hashicorp/terraform-plugin-sdk/v2/helper/schema",
    ],
)

go_test(
    name = "apimanagement_test",
    srcs = [
        "api_management_api_data_source_test.go",
        "api_management_api_diagnostic_resource_test.go",
        "api_management_api_operation_policy_resource_test.go",
        "api_management_api_operation_resource_test.go",
        "api_management_api_operation_tag_resource_test.go",
        "api_management_api_policy_resource_test.go",
        "api_management_api_release_resource_test.go",
        "api_management_api_resource_test.go",
        "api_management_api_schema_resource_test.go",
        "api_management_api_tag_description_resource_test.go",
        "api_management_api_tag_resource_test.go",
        "api_management_api_version_set_data_source_test.go",
        "api_management_api_version_set_resource_test.go",
        "api_management_authorization_server_resource_test.go",
        "api_management_backend_resource_test.go",
        "api_management_certificate_resource_test.go",
        "api_management_custom_domain_resource_test.go",
        "api_management_data_source_test.go",
        "api_management_diagnostic_resource_test.go",
        "api_management_email_template_resource_test.go",
        "api_management_gateway_api_resource_test.go",
        "api_management_gateway_certificate_authority_resource_test.go",
        "api_management_gateway_data_source_test.go",
        "api_management_gateway_host_name_configuration_data_source_test.go",
        "api_management_gateway_host_name_configuration_resource_test.go",
        "api_management_gateway_resource_test.go",
        "api_management_global_schema_resource_test.go",
        "api_management_group_data_source_test.go",
        "api_management_group_resource_test.go",
        "api_management_group_user_resource_test.go",
        "api_management_identity_provider_aad_resource_test.go",
        "api_management_identity_provider_aadb2c_resource_test.go",
        "api_management_identity_provider_facebook_resource_test.go",
        "api_management_identity_provider_google_resource_test.go",
        "api_management_identity_provider_microsoft_resource_test.go",
        "api_management_identity_provider_twitter_resource_test.go",
        "api_management_logger_resource_test.go",
        "api_management_named_value_resource_test.go",
        "api_management_notification_recipient_email_test.go",
        "api_management_notification_recipient_user_test.go",
        "api_management_openid_connect_provider_resource_test.go",
        "api_management_policy_resource_test.go",
        "api_management_product_api_resource_test.go",
        "api_management_product_data_source_test.go",
        "api_management_product_group_resource_test.go",
        "api_management_product_policy_resource_test.go",
        "api_management_product_resource_test.go",
        "api_management_product_tag_resource_test.go",
        "api_management_redis_cache_resource_test.go",
        "api_management_resource_test.go",
        "api_management_subscription_resource_test.go",
        "api_management_tag_resource_test.go",
        "api_management_user_data_source_test.go",
        "api_management_user_resource_test.go",
        "diff_suppress_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        ":apimanagement",
        "//internal/acceptance",
        "//internal/acceptance/check",
        "//internal/acceptance/testclient",
        "//internal/clients",
        "//internal/features",
        "//internal/services/apimanagement/parse",
        "//internal/tf/pluginsdk",
        "//utils",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/apimanagement/mgmt/2021-08-01/apimanagement",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/apimanagement/2021-08-01/schema",
    ],
)
